# NZ_geometries

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  noxfile.py  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: publish-to-test-pypi.yml
docs/: environment.yml  index.rst  install.rst  usage.rst
src/nzgeom/: coastlines.py
