[metadata]
name = nzgeom
version = 0.1.9
author = Timothy W. Hilton
author_email = t.hilton@gns.cri.nz
description = provide geospatial geometry for NZ coastlines and administrative regions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Timothy-W-Hilton/NZ_geometries
project_urls =
    Bug Tracker = https://github.com/Timothy-W-Hilton/NZ_geometries/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find_namespace:
package_dir =
            = src
python_requires = >=3.9
install_requires =
                 geopandas
                 rtree  # for bounding box clipping with geopandas
                 importlib_resources; python_version<'3.10' # for py3.9-compatible backport of importlib.resources.files()
[options.packages.find]
where = src
[options.package_data]
nzgeom.data =
            regions/*.gpkg
            coastlines/*.gpkg
